adds svc and returns errors

--- a/simulator/pom.xml
+++ b/simulator/pom.xml
@@ -49,6 +49,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>simulador-legv8</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
